<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/PersonalInformationActivity_parentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <LinearLayout
                android:id="@+id/converter_layout"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="1">

                <Button

                    android:background="@color/primary"
                    android:textColor="@color/white"
                    android:id="@+id/scanBTN"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="@string/scan"
                    android:textAlignment="center" />

                <Button
                    android:layout_marginTop="5dp"
                    android:padding="5dp"
                    android:background="@color/white"
                    android:textColor="@color/primary"
                    android:id="@+id/generateBTN"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="@string/generate"
                    android:textAlignment="center" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/YOUR_ADMOB_BANNER_AD_ID"></com.google.android.gms.ads.AdView>

</RelativeLayout>
