<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/PersonalInformationActivity_parentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/converter_layout"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="20dp"
                    android:hint="@string/generate_hint"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="normal" />

                <Button

                    android:background="@color/white"
                    android:textColor="@color/primary"
                    android:id="@+id/genBTN"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="@string/generate"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:hint="@string/generate_hint_def"
                    android:textColor="@color/light_grey"
                    android:textSize="12sp"
                    android:textStyle="normal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_gravity="center">

                    <ImageView android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:id="@+id/imageView"
                        android:layout_marginTop="2dp"
                        android:src="@mipmap/ic_qr_placeholder"
                        android:layout_marginBottom="5dp"/>

                </LinearLayout>


                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/shareImg"
                    android:src="@mipmap/ic_share"/>
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/YOUR_ADMOB_BANNER_AD_ID"></com.google.android.gms.ads.AdView>

</RelativeLayout>
